# Inline-Proxy

./: .gitguardian.yaml  .gitignore  Dockerfile  README.md  docker-compose.yml  gateway.example.yaml  policies.filesystem.json  policies.json  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  server.py  styles.css
demo/: attack_scenario.py  console_demo.py  feature_demo.py  mock_server.py  real_filesystem_demo.py  run_demo.py
deploy/: gateway.docker.yaml  users.example.yaml
docs/: ARCHITECTURE.md  HANDOFF-phase4.md  HANDOFF-phase5.md  PLAN.md  SYSTEM_DESIGN.md
gateway/: anomaly.py  approval.py  audit.py  main.py  policy.py  redact.py  risk.py  sequence.py
policies/: mock-crm.tests.yaml  mock-crm.yaml  policy.schema.json
scripts/: loadtest.py
src/mcp_gateway/: __init__.py  __main__.py
src/mcp_gateway/anomaly/: __init__.py  base.py  claude.py  heuristic.py  monitor.py
src/mcp_gateway/approvals/: __init__.py  broker.py  models.py
src/mcp_gateway/audit/: events.py  index.py  reader.py  recorder.py  spool.py
src/mcp_gateway/central/: __init__.py  config.py
src/mcp_gateway/cli/: __init__.py
src/mcp_gateway/console/: __init__.py  app.py  approvals.py  auth.py
src/mcp_gateway/core/: context.py  errors.py  failure.py  gateway.py  outcome.py  pipeline.py  session.py
src/mcp_gateway/policy/: backtest.py  engine.py  loader.py  matcher.py  merge.py  testing.py
tests/e2e/: policy_anomaly.yaml  policy_phase0.json  policy_redaction.yaml  redaction_mock.py  test_console_approval.py  test_wrap_anomaly.py  test_wrap_approval.py  test_wrap_attack.py  test_wrap_features.py  test_wrap_mock.py  test_wrap_redaction.py
tests/redaction_corpus/: test_eval.py  test_span_eval.py
tests/unit/: test_actions.py  test_anomaly.py  test_approvals.py  test_audit_index.py  test_audit_reader.py  test_backtest.py  test_central.py  test_console_api.py  test_console_approvals.py  test_console_auth.py  test_failure.py  test_gateway_failure.py  test_goldens.py  test_jsonrpc.py  test_loadtest.py  test_pipeline.py  test_policy.py  test_redaction_budget.py  test_redaction_context.py  test_redaction_custom.py  test_redaction_detectors.py  test_redaction_engine.py  test_redaction_operators.py  test_redaction_presidio.py  test_redaction_service.py  test_redaction_structured.py  test_redaction_tokenize.py  test_redaction_vault.py  test_risk.py  test_sequence.py  test_state.py  test_state_postgres.py  test_state_redis.py  test_streamable_http.py
(+54 files in other folders)
