[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "A transparent security gateway for MCP: policy enforcement, PII/secret redaction, taint tracking, approvals, and audit on every agent tool call."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Harsh Jannawar" }]
keywords = ["mcp", "security", "proxy", "ai-agents", "policy"]

# Dependencies are added the phase they are first used, never speculatively
# (docs/SYSTEM_DESIGN.md §8). pyyaml: policy files (Phase 1).
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Extras are declared up front so the packaging story is visible from day one;
# the implementations arrive in their phases (docs/PLAN.md).
server = ["fastapi>=0.111", "uvicorn>=0.30"]            # Phase 4: console + HTTP transport
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]  # Phase 2: NER tier
oidc = ["pyjwt[crypto]>=2.8"]                            # Phase 9: Okta/Auth0
vault = ["cryptography>=42"]                             # Phase 2c: encrypted token vault
anomaly = ["anthropic>=0.40"]                            # Phase 3b: Claude anomaly monitor
s3 = ["boto3>=1.34"]                                     # Phase 11: audit sink
splunk = ["httpx>=0.27"]                                 # Phase 11: HEC sink
postgres = ["psycopg[binary]>=3.1"]                      # Phase 5: central index store
redis = ["redis>=5.0"]                                   # Phase 5: shared session state
dev = ["pytest>=8.0", "ruff>=0.5", "pyright>=1.1", "httpx>=0.27"]  # httpx: FastAPI TestClient (console tests)

[project.scripts]
mcp-gateway = "mcp_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/Query() in argument
# defaults by design; these calls are effectively immutable markers, not the
# mutable-default footgun B008 targets.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
